@@ -100,6 +100,8 @@ test-cdrom.toc application/x-cdrdao-toc
 # Copied from /etc/sysconfig/iptables
 test.iptables text/x-iptables
 test-vpn.pcf application/x-cisco-vpn-settings x
+# Copied from https://bugs.freedesktop.org/show_bug.cgi?id=16228
+test.php application/x-php
 
 # xml subtypes
 test.ttx application/x-font-ttx
