@@ -1,0 +1,8 @@
+<html>
+<head>
+<title>Test</title>
+</head>
+<body>
+<?php echo 'Test'; ?>
+</body>
+</html>
