@@ -1,5 +1,11 @@
 2008-06-11  Bastien Nocera  <hadess@hadess.net>
 
+	* tests/list:
+	* tests/test.php: Add a test case for PHP files, from
+	https://bugs.freedesktop.org/show_bug.cgi?id=16228
+
+2008-06-11  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Fix make check
 
 2008-06-11  Bastien Nocera  <hadess@hadess.net>
